FIX: grid broken UI issues

--- a/components/home/blogCard/styles.scss
+++ b/components/home/blogCard/styles.scss
@@ -13,8 +13,9 @@
   }
 
   .grid-layout {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    // display: grid;
+    // grid-template-columns: repeat(3, 1fr);
+    display: flex;
     position: relative;
     height: 100%;
     gap: 50px;
@@ -34,6 +35,7 @@
     position: relative;
     padding: 28px 15px 0;
     height: 100%;
+    min-width: 30.80%;
 
     @include mobile {
       max-width: 91%;
